<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="old_launcher_provider_uri" translatable="false">content://com.android.launcher2.settings/favorites?notify=true</string>
    <string name="receive_launch_broadcasts_permission" translatable="false">com.android.launcher3.permission.RECEIVE_LAUNCH_BROADCASTS</string>
    <string name="receive_first_load_broadcast_permission" translatable="false">com.android.launcher3.permission.RECEIVE_FIRST_LOAD_BROADCAST</string>
    <string name="application_name">Launcher3</string>
    <string name="home">Home</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name"></string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="widget_adder">Widgets</string>
    <string name="toggle_weight_watcher">Show Mem</string>
    <string name="long_press_widget_to_add">Touch &amp; Long press to pick up a widget.</string>
    <string name="market">Shop</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="external_drop_widget_pick_format" translatable="false">%1$s (%2$d \u00d7 %3$d)</string>
    <string name="external_drop_widget_error">Couldn\'t drop item on this Home screen.</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="completely_out_of_space">No more room on your Home screens.</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="invalid_hotseat_item">This widget is too large for the Favorites tray</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Choose shortcut</string>
    <string name="title_select_application">Choose app</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_target_label">Drag to here to delete</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="accessibility_search_button">Search</string>
    <string name="accessibility_voice_search_button">Voice Search</string>
    <string name="accessibility_all_apps_button">Apps</string>
    <string name="accessibility_delete_button">Remove</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="help_url" translatable="false"></string>
    <string name="cab_menu_delete_app">Uninstall app</string>
    <string name="cab_menu_app_info">App details</string>
    <string name="cab_app_selection_text">1 app selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows the app to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">Read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings 
                  and shortcuts in Home screen.</string>
    <string name="permlab_write_settings">Write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in  Home screen.</string>
    <string name="gadget_error_text">Problem in loading widget</string>
    <string name="gadget_setup_text">Setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="dream_name">Rocket Launcher</string>
    <string name="folder_hint_text">Folder</string>
    <string name="workspace_description_format">Home screen %1$d</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="first_run_cling_title">Welcome</string>
    <string name="first_run_cling_description">Make yourself at home.</string>
    <string name="first_run_cling_custom_content_hint"></string>
    <string name="first_run_cling_search_bar_hint"></string>
    <string name="first_run_cling_create_screens_hint">Create more screens for apps and folders</string>
    <string name="migration_cling_title">Copy your app icons</string>
    <string name="migration_cling_description">Import icons and folders from your old Home screens?</string>
    <string name="migration_cling_copy_apps">COPY ICONS</string>
    <string name="migration_cling_use_default">START FRESH</string>
    <string name="workspace_cling_title">Organize your space</string>
    <string name="workspace_cling_move_item">Touch &amp; Long press background to manage wallpaper, widgets and settings.</string>
    <string name="workspace_cling_longpress_title">Wallpapers, widgets, &amp; settings</string>
    <string name="workspace_cling_longpress_description">Touch &amp; Long press background to customise</string>
    <string name="workspace_cling_longpress_dismiss">GOT IT</string>
    <string name="folder_cling_title">Here\'s a folder</string>
    <string name="folder_cling_create_folder">To create one like this, touch &amp; long press an app, then move it over another.</string>
    <string name="cling_dismiss">OK</string>
    <string name="dummy_custom_cling_error_message">Error: custom workspace layout passed in but custom cling was not overwritten</string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="debug_memory_activity">* HPROF</string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Settings</string>
    <string name="package_state_enqueued">Waiting</string>
    <string name="package_state_downloading">Downloading</string>
    <string name="package_state_installing">Installing</string>
    <string name="package_state_unknown">Unknown</string>
    <string name="package_state_error">Couldn not restored</string>
    <string name="abandoned_clean_all">Remove All</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_search">Search</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed.
        You can remove it, or search for the app and install it manually.
    </string>
    <string name="frequent_used_apps_title">Frequent Used App</string>
    <string name="frequent_used_apps_empty_tips">No Frequent Used Apps</string>
    <string name="lockscreen_wallpaper_button_text">Lock Wallpapers</string>
    <string name="effects_button_text">Effects</string>
    <string name="drag_edge_exit_hint">Drag up to delete, drag to blank space back to desktop</string>
    <string name="click_empty_point_exit_hint">Click on the blank space back to desktop</string>
    <string name="folder_drag_delete_hint">Drag here to delete</string>
    <string name="set_as_home_page">Set as defaut page</string>
    <string name="delete_page">Delete page</string>
    <string name="delete_last_page_hint">Can not delelte the last page</string>
    <string name="delete_user_default_page_hint">Can not delete the last page!</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="cancel_target_label">Cancel</string>
    <string name="delete_page_dialog_title">Delete</string>
    <string name="delete_page_dialog_button">Delete</string>
    <string name="delete_page_dialog_msg">Current page contains widgets or icons, delete it?</string>
    <string name="personal_center_widget_already_exist_hint">"Already has personal centre widget."</string>
    <string name="classic_effect">Classic</string>
    <string name="cylinder_in_effect">Cylinder In</string>
    <string name="misty_effect">Misty</string>
    <string name="stack_up_effect">Stack Up</string>
    <string name="dof_effect">Depth of Field</string>
    <string name="cube_effect">Cube</string>
    <string name="windmill_effect">Windmill</string>
    <string name="accordion_effect">Accordion</string>
    <string name="setting_switch_effect_text">OK</string>
    <string name="max_page_hint_format">Max page count is %1$d</string>
    <string name="cling_tip_text_1">Click avatar to open Personal Center\nand then you can easily check traffic\ninformation as well as set avatar.</string>
    <string name="cling_tip_text_2">Use gesture to view frequently used apps.</string>
    <string name="cling_tip_text_3">Long press Home key to start LingXi.</string>
    <string name="default_folder_tile">Folder</string>
    <string name="apps_manage_area">Icon Management</string>
    <string name="apps_manage_area2">Batch move</string>
    <string name="lock_screen_wallpaper">Lockscreen wallpaper</string>
    <string name="home_wallpaper">Home wallpaper</string>
    <string name="live_wallpaper">Live wallpaper</string>
    <string name="change_home_wallpaper">Switch Wallpaper</string>
    <string name="randomly_change_home_wallpaper">Randomly change lockscreen wallpaper</string>
    <string name="randomchange_on">ON</string>
    <string name="randomchange_off">OFF</string>
    <string name="randomchange_enable_false">Magazine lockscreen appling,the click is invalid</string>
    <string name="search_apps_title">"Searching..."</string>
    <string name="more_wallpaper">"Choose image"</string>
    <string name="wallpaper_time_change">"wallpaper timing change start succeed"</string>
    <string name="tools_folder_name">"Tools"</string>
    <string name="entertainment_folder_name">"Entertainment"</string>
    <string name="wallpaper_title">"Wallpaper"</string>
</resources>