<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:background="@drawable/longpress_cling_welcome_content"
        />
    <ImageView
        android:id="@+id/cling_tip_img_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:src="@drawable/cling_tip_img_3"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/cling_tip_text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-medium"
        android:textSize="14sp"
        android:text="@string/cling_tip_text_3"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/cling_tip_img_3"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/cling_dismiss_longpress_info"
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/workspace_cling_longpress_dismiss"
        android:background="@drawable/cling_dismiss_button"
        android:textColor="#FFFFFFFF"
        android:textSize="14sp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="496dp"
        android:layout_above="@id/cling_tip_text_3"
        />

    <ImageView
        android:id="@+id/cling_tip_img_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cling_tip_img_2"
        android:layout_marginLeft="73dp"
        android:layout_marginBottom="175dp"
        android:layout_above="@id/cling_dismiss_longpress_info"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/cling_tip_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textSize="14sp"
        android:text="@string/cling_tip_text_2"
        android:layout_marginTop="68dp"
        android:layout_marginLeft="120dp"
        android:layout_alignTop="@id/cling_tip_img_2"
        android:layout_alignLeft="@id/cling_tip_img_2"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/cling_tip_img_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cling_tip_img_1"
        android:layout_marginTop="71dp"
        android:layout_marginLeft="27dp"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/cling_tip_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textSize="14sp"
        android:text="@string/cling_tip_text_1"
        android:paddingBottom="15dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="14dp"
        android:layout_alignLeft="@id/cling_tip_img_1"
        android:layout_alignTop="@id/cling_tip_img_1"
        android:visibility="gone"
        />

</RelativeLayout>