<?xml version="1.0" encoding="utf-8"?>
<!--
===================================================================================
|   when    |    who       |    keyword      |      why        |    what         |
===================================================================================
20160325     liyichong.wt   bug 155067        requirements      add layout
20160413     liyichong.wt   other             bug               add default lockscreen wallpaper
20160518     libaoyin.wt    bug 177423        bug               translation
20160613     liyichong.wt   bug 186283        bug               modify wallpaper layout
20160719     liyichong.wt   bug 198351        bug               modify wallpaper layout
===================================================================================
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/wallpaper_title_color"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallpaper_title" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:baselineAligned="false"
        android:orientation="horizontal" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >
                <ImageView
                    android:id="@+id/home_wallpaper"
                    android:layout_width="140dp"
                    android:layout_height="249dp"
                    android:background="#869695"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/home_wallpaper"
                    android:textSize="12sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >
                <ImageView
                    android:id="@+id/lock_screen_wallpaper"
                    android:layout_width="140dp"
                    android:layout_height="249dp"
                    android:background="@drawable/lockscreen_wallpaper"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/lock_screen_wallpaper"
                    android:textSize="12sp"/>
            </LinearLayout>
            
    </LinearLayout>
    <ListView 
        android:id="@android:id/list" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:drawSelectorOnTop="false" 
        android:layout_weight="1" 
    /> 
</LinearLayout>
